# parsidion

./: .coverage  .gitignore  AGENTS.md  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CLAUDE-VAULT.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  SECURITY.md  hackernews-release.md  install.py  project-explorer-slideshow.html  pyproject.toml  reddit-release.md  research-agent-slideshow.html  vault-architecture-slideshow.html  vault-deduplicator-slideshow.html  vault-explorer-slideshow.html
.github/workflows/: ci.yml  pages.yml
agents/: project-explorer.md  research-agent.md  research-documentation-agent.md  vault-deduplicator.md  vault-explorer.md
docs/: AGENTCHROME.md  ARCHITECTURE.md  CLAUDE.md  EMBEDDINGS.md  EMBEDDINGS_EVAL.md  MCP.md  MCPL.md  README.md  VAULT_SYNC.md  VISUALIZER.md
installer/: __init__.py  colors.py  hooks.py  paths.py  schedule.py  skill.py  ui.py  vault.py
parsidion-mcp/: pyproject.toml
parsidion-mcp/src/parsidion_mcp/tools/: context.py  search.py
parsidion-mcp/tests/: test_context.py  test_integration.py  test_notes.py  test_ops.py  test_search.py
scripts/: build_graph.py  install-pi-extension
skills/claude-vault/: SKILL.md
skills/parsidion/: AGENT_INSTRUCTIONS.md  SKILL.md
skills/parsidion-cc/: SKILL.md
tests/: conftest.py  test_ai_backend.py  test_ai_script_migration.py  test_connect.py  test_hook_integration.py  test_install.py  test_note_index_date.py  test_pre_compact_hook.py  test_provenance.py  test_session_start_hook.py  test_session_stop_hook.py  test_summarize_sessions.py  test_update_index.py  test_vault_common.py  test_vault_conflicts.py  test_vault_dirs_sync.py  test_vault_doctor.py  test_vault_export.py  test_vault_merge.py  test_vault_resolver_parity.py  test_vault_search.py  test_vault_stats.py
visualizer/: .gitignore  CLAUDE.md  README.md  next.config.ts  package.json  server.ts  tsconfig.json  tsconfig.server.json
visualizer/app/: layout.tsx  page.tsx
visualizer/components/: ConfirmDialog.tsx  ConflictDialog.tsx  DiffViewer.tsx  FileExplorer.tsx  FrontmatterEditor.tsx  HUDPanel.tsx  (+9 more)
(+151 files in other folders)
